--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -188,6 +188,15 @@
             android:backgroundTint="@color/white"/>
 
         <ImageButton
+            android:id="@+id/ib_undo"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_margin="5dp"
+            android:src="@drawable/ic_baseline_undo_24"
+            android:scaleType="fitXY"
+            android:backgroundTint="@color/white"/>
+
+        <ImageButton
             android:id="@+id/ib_brush_dialog"
             android:layout_width="50dp"
             android:layout_height="50dp"
