fix: issue when saving image

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -212,7 +212,8 @@
             android:layout_margin="5dp"
             android:src="@drawable/ic_baseline_save_24"
             android:scaleType="fitXY"
-            android:backgroundTint="@color/white"/>
+            android:backgroundTint="@color/white"
+            android:clickable="true"/>
 
 
     </LinearLayout>
